# ai-agent-platform

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
adr/: adr-001-agent-framework.md  adr-002-memory-strategy.md  adr-003-routing-strategy.md  adr-004-model-selection.md  adr-005-observability.md
app/: __init__.py  config.py
app/agents/: __init__.py  base.py  knowledge_agent.py  research_agent.py  summarization_agent.py
app/api/: history.py  main.py  routes.py
app/evaluation/: __init__.py  metrics.py  service.py
app/governance/: __init__.py  guards.py
app/memory/: __init__.py  (+3 more)
diagrams/: _legend.d2  _legend.d2.bak  _theme-a4.d2  _theme.d2  agent-interaction.d2  agent-state-flow.d2  base-agent.d2  cost-cache.d2  cost-fallback.d2  cost-model-tier.d2  deployment-aws.d2  deployment-k8s.d2  deployment-local.d2  evaluation-flow.d2  evaluation-improvement.d2  governance-hitl.d2  intelligence-workbench.d2  memory-architecture.d2  observability-traces.d2  render.sh  scaling-evolution.d2  system-context.d2  workflow-routing.d2  workflow-sequence.d2  workflow-state.d2
docker/: Dockerfile  docker-compose.yml  init.sql  otel-collector-config.yaml  prometheus.yml
docs/: agent-design.md  architecture.md  cost-governance.md  deployment-guide.md  evaluation-framework.md  monitoring-observability.md  security-governance.md  tradeoffs.md  workflow-orchestration.md
examples/: run_workflow.py
tests/: test_api.py  test_workflow.py
workbench/: .env.example  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
(+26 files in other folders)
