[project]
name = "ai-agent-platform"
version = "1.0.0"
description = "Enterprise-grade Agentic AI platform reference implementation"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "slow: integration tests that execute full workflows",
]
